[project]
name = "intergrate-tool-example"
version = "0.1.0"
description = "devlop tool and integrate tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langgraph_opanai",
    "agentarts-sdk",
]

[tool.uv]
package = false

[tool.uv.sources]
agentarts-sdk = { workspace = true }

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
